h2 no-wrap fix

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,13 +32,13 @@ body {
   background-color: #141D2F;
   color: #FFFFFF;
   box-sizing: border-box;
-  overflow-x: hidden;
 }
 
 h2 {
   font-size: 48px;
   font-weight: 700;
   margin: 0;
+  white-space: nowrap;
 }
 
 html {
